[ResourceItem] Fix broken focus ring styles (#10268)
### WHY are these changes introduced?

Resolves #10175.

Focus ring was broken on ResourceItem prior to uplift and was flagged
during se23 clean up.

### WHAT is this pull request doing?

Fixes minor issue on ResourceList.stories.tsx where LegacyCard was not
using the correct border radius on xs screens (should match IndexTable
where border-radius is set to `0` for xs screens).

Fixes focus ring styles by opting to use `offset` property as opposed to
the `focus-ring` mixin.
    <details>
      <summary>ResourceItem focus state — before</summary>
<img
src="https://github.com/Shopify/polaris/assets/26749317/0f2fc337-34d5-483d-b62b-df907277ff22"
alt="ResourceItem focus state — before">
    </details>
    <details>
      <summary>ResourceItem focus state — after</summary>
<img
src="https://github.com/Shopify/polaris/assets/26749317/383eb27e-0c2b-40d4-ab90-52205312ce73"
alt="ResourceItem focus state — after">
    </details>

### How to 🎩

[ResourceItem
Storybook](https://5d559397bae39100201eedc1-egkosgfazl.chromatic.com/?path=/story/all-components-resourceitem--default)
[ResourceItem Prod
Storybook](https://storybook.polaris.shopify.com/?path=/story/all-components-resourceitem--default&globals=polarisSummerEditions2023:true)

[BulkActions
Storybook](https://5d559397bae39100201eedc1-egkosgfazl.chromatic.com/?path=/story/all-components-resourcelist--with-bulk-actions)
[BulkActions Prod
Storybook](https://storybook.polaris.shopify.com/?path=/story/all-components-resourcelist--with-bulk-actions&globals=polarisSummerEditions2023:true)

🖥 [Local development
instructions](https://github.com/Shopify/polaris/blob/main/README.md#local-development)
🗒 [General tophatting
guidelines](https://github.com/Shopify/polaris/blob/main/documentation/Tophatting.md)
📄 [Changelog
guidelines](https://github.com/Shopify/polaris/blob/main/.github/CONTRIBUTING.md#changelog)

### 🎩 checklist

- [x]

--- a/polaris-react/src/components/ResourceItem/ResourceItem.scss
+++ b/polaris-react/src/components/ResourceItem/ResourceItem.scss
@@ -111,7 +111,7 @@
 }
 
 .ListItem {
-  // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
+  // stylelint-disable-next-line -- include focus-ring mixin to prevent jump in content for first focused element
   @include focus-ring($border-width: -1px);
 
   .ListItem + & {
@@ -120,38 +120,61 @@
     @include item-separator;
   }
 
-  &:not(.hasBulkActions):not(.selectMode) {
-    // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
-    &::after {
-      border-radius: var(--p-border-radius-05);
-    }
-
-    // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
-    &:last-of-type {
-      border-bottom-left-radius: var(--p-border-radius-2);
-      border-bottom-right-radius: var(--p-border-radius-2);
-      // stylelint-disable selector-max-specificity -- Needed due to the nesting of the elements that change border-radius based on selection mode
-      .ItemWrapper {
-        border-radius: inherit;
-      }
-
-      &.focused::after {
-        border-bottom-left-radius: var(--p-border-radius-2);
-        border-bottom-right-radius: var(--p-border-radius-2);
-      }
-      // stylelint-enable
-    }
-  }
-
   &.focused {
-    // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
-    @include focus-ring($style: 'focused');
-    // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
+    // stylelint-disable-next-line -- remove focus-ring mixin to use outline styles
+    @include no-focus-ring;
+    outline: var(--p-border-width-2) solid
+      var(--p-color-border-interactive-focus);
+    outline-offset: calc(-1 * var(--p-space-05));
+    // stylelint-disable-next-line -- custom property
     z-index: var(--pc-resource-item-clickable-stacking-order);
-  }
+    border-radius: var(--p-border-radius-0-experimental);
 
-  // stylelint-disable-next-line selector-max-specificity, selector-max-combinators -- generated by polaris-migrator DO NOT COPY
-  * + ul > &:first-of-type.focused::after {
-    top: 1px;
+    @media #{$p-breakpoints-sm-up} {
+      border-radius: var(--p-border-radius-3);
+
+      &:first-of-type {
+        border-bottom-left-radius: var(--p-border-radius-0-experimental);
+        border-bottom-right-radius: var(--p-border-radius-0-experimental);
+      }
+
+      &:last-of-type {
+        border-top-left-radius: var(--p-border-radius-0-experimental);
+        border-top-right-radius: var(--p-border-radius-0-experimental);
+      }
+    }
+
+    &:only-child {
+      border-radius: var(--p-border-radius-0-experimental);
+
+      @media #{$p-breakpoints-sm-up} {
+        border-radius: var(--p-border-radius-3);
+      }
+    }
+
+    // stylelint-disable-next-line selector-max-class -- set border radius for selectable items
+    &.selectable {
+      border-radius: var(--p-border-radius-0-experimental);
+
+      @media #{$p-breakpoints-sm-up} {
+        // stylelint-disable-next-line -- set border radius for last selectable item to match ResourceList border radius
+        &:last-child {
+          border-bottom-left-radius: var(--p-border-radius-3);
+          border-bottom-right-radius: var(--p-border-radius-3);
+        }
+
+        // stylelint-disable-next-line -- set border radius for last selectable item to match BulkActions border radius
+        &.hasBulkActions {
+          // stylelint-disable-next-line -- set border radius for last selectable item to match BulkActions border radius
+          &:last-child {
+            // stylelint-disable-next-line -- set border radius for last selectable item to match BulkActions border radius
+            &.selected {
+              border-bottom-left-radius: var(--p-border-radius-0-experimental);
+              border-bottom-right-radius: var(--p-border-radius-0-experimental);
+            }
+          }
+        }
+      }
+    }
   }
 }
